HotelEase-k8s/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hotelease



# Isolates all your project's resources under 
# one named group instead of dumping everything into default
