HotelEase-k8s/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hotelease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hotelease-backend:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

        volumeMounts:
        - name: temp-cache
          mountPath: /app/temp
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: temp-cache
        emptyDir: {}
      - name: config-volume
        configMap:
          name: backend-config
