HotelEase-k8s/k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-practice
  namespace: hotelease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-practice
  template:
    metadata:
      labels:
        app: mongo-practice
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc-dynamic
