HotelEase-k8s/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hotelease
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
