HotelEase-k8s/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-practice
  namespace: hotelease
spec:
  selector:
    app: mongo-practice
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP


  # so issue of change of ips with destruction / contruction 
  # of pods does not hit
  # this file provides single fixed ip for any pods of that cluster
