HotelEase-k8s/k8s/worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: hotelease
  labels:
    app: worker
spec:
  selector:
    app: worker
  ports:
  - port: 9091
    targetPort: 9091
    name: metrics
